--- a/TribeApp/templates/index.html
+++ b/TribeApp/templates/index.html
@@ -15,6 +15,9 @@
             <div class="row">
                 <h1>find your tribe</h1>
             </div>
+            <div>
+                <p>this is where things will go</p>
+            </div>
         </div>
     </body>
 </html>
