added css file to base layout

--- a/TribeApp/templates/TribePageBases/DefaultImportsBaseLayout.html
+++ b/TribeApp/templates/TribePageBases/DefaultImportsBaseLayout.html
@@ -8,6 +8,8 @@
         <!-- Latest compiled JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
         
+        <!--import main css-->
+        <link rel="stylesheet" href="/static/css/main.css">
         <title>tribe | {{ username }}</title>
     </head>
     {% block content %}
