--- a/TribeApp/templates/index.html
+++ b/TribeApp/templates/index.html
@@ -3,7 +3,7 @@
 {% block content%}
 <body>
     <div>
-        <div class="row">
+        <div class="row tribe-header">
             <h1>find your tribe</h1>
         </div>
         <div>
