added files for nav partial

--- a/TribeApp/templates/TribePageBases/DefaultImportsBaseLayout.html
+++ b/TribeApp/templates/TribePageBases/DefaultImportsBaseLayout.html
@@ -8,6 +8,9 @@
         <!-- Latest compiled JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
         
+        <!--import main.css-->
+        <script type="text/javascript" src="/static/scripts/main.js"></script>
+
         <!--import main css-->
         <link rel="stylesheet" href="/static/css/main.css">
         <title>tribe | {{ username }}</title>
