--- a/TribeApp/templates/index.html
+++ b/TribeApp/templates/index.html
@@ -3,9 +3,7 @@
 {% block content%}
 <body>
     <div>
-        <div class="row tribe-header">
-            <h1>find your tribe</h1>
-        </div>
+        {% include "TribeNavigationPartials/MainNavigationPartial.html" %}
         <div>
             <p>this is where things will go</p>
         </div>
