adding nav partial

--- a/TribeApp/templates/TribeNavigationPartials/MainNavigationPartial.html
+++ b/TribeApp/templates/TribeNavigationPartials/MainNavigationPartial.html
@@ -6,3 +6,9 @@
     <h1>find your tribe</h1>
     <button id="login-button" type="button">Login</button>
 </div>
+
+<div id="login-modal" class="modal">
+    <div id="login-modal-content" class="modal-content">
+    text
+    </div>
+</div>
