login file structure checkpoint

--- a/TribeApp/templates/TribeNavigationPartials/MainNavigationPartial.html
+++ b/TribeApp/templates/TribeNavigationPartials/MainNavigationPartial.html
@@ -9,6 +9,49 @@
 
 <div id="login-modal" class="modal">
     <div id="login-modal-content" class="modal-content">
-    text
+
+        <!--login form-->
+        <div id="login-form">
+            <form action="" method="post">
+                <div class="row">
+                    Login
+                </div>
+                <div class="row">
+                    <input type="text" placeholder="username">
+                </div>
+                <div class="row">
+                    <input type="password" placeholder="password">
+                </div>
+                <div class="row">
+                    <input type="submit">
+                </div>
+            </form>
+        </div>
+        
+        <!--signup form-->
+        <div id="signup-form">
+            <form action="" method="post">
+                <div class="row">
+                    Sign up
+                </div>
+                <div class="row">
+                    <input type="text" placeholder="email" id="signup-email-feild">
+                </div>
+                <div class="row">
+                    <input type="text" placeholder="username" id="signup-username-feild">
+                </div>
+                <div class="row">
+                    <input type="password" placeholder="password" id="signup-password-feild">
+                </div>
+                <div class="row">
+                    <input type="submit" id="signup-submit-feild">
+                </div>
+            </form>
+        </div>
+
+        <!--Profile form-->
+        <div id="user-profile-form">
+            
+        </div>
     </div>
 </div>
