--- a/TribeApp/templates/TribeFormPartials/LoginFormPartial.html
+++ b/TribeApp/templates/TribeFormPartials/LoginFormPartial.html
@@ -4,10 +4,14 @@
             Login
         </div>
         <div class="row">
-            <input type="text" placeholder="username">
+            <input type="text" placeholder="username" id="login-username-field">
         </div>
         <div class="row">
-            <input type="password" placeholder="password">
+            <input type="password" placeholder="password" id="login-password-field">
+        </div>
+        <div>
+            remeber me
+            <input type="radio" name="remember-me" id="login-remember-me-field">
         </div>
         <div class="row">
             <input type="submit">
